# hadrana

./: .gitignore  README.md  devlog.md  progress.txt  pyproject.toml
analysis/c2pt/D251/: D251_binsize_energies.ipynb  D251_c2pt_runs.txt  D251_plot_Eff.ipynb  D251_plot_dispersion.ipynb
analysis/exceptionals/: identify_twopoint_exceptionals.py
analysis/fits/fit_c2pt/: fit_c2pt_ratio.py  models_c2pt_ratio.py  timeslice_criteria.py
hadrana.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
misc/lhpc/: LHPC.info  lhpc_overview.txt
misc/lhpc/notebooks/: plot_lhpc_comparison_pseudoscalar.ipynb
misc/lhpc/scripts/: A650_lhpc_comparison.py  lhpc.sh  lhpc_comparison.py
src/hadrana/: fits.py  loader.py  momenta.py  plotting.py  progress.txt  serialiser.py  statistics.py
src/hadrana.egg-info/: PKG-INFO  SOURCES.txt
src/hadrana/c2pt/: c2pt_io.py  compute_c2pt.py  generate_jackknife_c2pt.py
src/hadrana/ensembles/: ensemble_configuration_numbers.py  ensemble_exceptionals.py  ensemble_helpers.py  ensemble_lattice_dimensions.py  ensemble_list.py  ensemble_measurements_c2pt.py  ensemble_measurements_c3pt.py  ensemble_replica_order.py  ensemble_specs.py  helpers.py
src/hadrana/exceptionals/: exceptional_indices.py  mad.py
src/hadrana/fits/: fit_c2pt.py  results.py
src/hadrana/hadrana_deprecated/: correlator_mapping.json  plotting.py  style.py
tests/: test_bin_analysis.py  test_c2pt_exceptionals.py  test_fit_c2pt.py  test_fit_c2pt_ratio.py  test_fit_c2pt_v2.py
tests/test_notebooks/: test_plot_c2pt_ratio.ipynb  test_plot_effective_energies.ipynb
(+50 files in other folders)
