[project]
name = "hadrana"
version = "0.0.1"
authors = [{ name = "Christian Kindler"}]
description = ""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.4",
    "h5py>=3.15.1",
    "iminuit>=2.32.0"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]